--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--    <title>Nakshathra Boutique</title>-->
+<!--    <title> Boutique</title>-->
     <title>IHA Designs</title>
 <!--check path    -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
