--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,9 +9,15 @@
                     <ul id="MenuItems">
                         <li><a href="{% url 'home' %}">Home</a></li>
                         <li><a href="{% url 'product_list' %}">Products</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="{% url 'account' %}">Account</a></li>
+<!--                        <li><a href="">About</a></li>-->
+<!--                        <li><a href="">Contact</a></li>-->
+
+                        {% if not user.is_authenticated %}
+                            <li><a href="{% url 'account' %}">Account</a></li>
+                            {% else%}
+                            <li><a href="{% url 'logout' %}">Logout</a></li>
+                        {% endif  %}
+
                     </ul>
                 </nav>
 
