--- a/templates/products_list.html
+++ b/templates/products_list.html
@@ -14,12 +14,11 @@
 
     {% for items in products|chunks_tag:4 %}   <!--list 4 items-->
         <div class="row">
+<!--            Show products-->
             {% for i in items %}
-            <!-- Debug line -->
-<!--<p>{{ i }}</p>-->
                  <div class="col-4">
-                               <!-- Link to the product detail page -->
-                    <a href="{% url 'product_detail' i.id  %}" >
+
+                    <a href="{% url 'product_detail' i.id  %}" > <!-- Link to the product detail page -->
                         <img src="{{i.image.url}}"  alt="{{ i.title }}"></a>
                      <!-- Display product details -->
                     <h4>{{i.title}}</h4>
@@ -47,15 +46,8 @@
         </div>
     </div>
 </div>
-<!--=======-->
-<!--            <select>-->
-<!--                <option>Default Sort</option>-->
-<!--                <option>Sort By Price</option>-->
-<!--                <option>Sort By Popularity</option>-->
-<!--                <option>Sort By Rating</option>-->
-<!--                <option>Sort By Sale</option>-->
-<!--            </select>-->
-<!--        </div>-->
+
+
 <!--        <div class="row">-->
 <!--            <div class="col-4">-->
 <!--                   <div class="rating">-->
@@ -67,149 +59,4 @@
 <!--                </div>-->
 <!--                <p>$50.00</p>-->
 <!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-2.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-3.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-4.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="row">-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-5.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-6.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-7.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-8.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="row">-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-9.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-10.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-11.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <img src="{%static 'images/product-12.jpg' %}">-->
-<!--                <h4>Red Printed T-Shirt</h4>-->
-<!--                <div class="rating">-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star"></i>-->
-<!--                    <i class="fa fa-star-o"></i>-->
-<!--                </div>-->
-<!--                <p>$50.00</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="page-btn">-->
-<!--            <span>1</span>-->
-<!--            <span>2</span>-->
-<!--            <span>3</span>-->
-<!--            <span>4</span>-->
-<!--            <span>→</span>-->
-<!--        </div>-->
-<!--    </div>-->
->>>>>>> Stashed changes
+
