--- a/templates/cart_container.html
+++ b/templates/cart_container.html
@@ -1,59 +1,39 @@
 {%load static%}
 <div class="small-container cart-page">
+    {% if cart  %}
         <table>
+            <tbody>
             <tr>
                 <th>Product</th>
                 <th>Quantity</th>
                 <th>Subtotal</th>
             </tr>
+
+           {% for cart_item in cart.added_items.all %}  <!--here get the object of ordered item -->
             <tr>
                 <td>
                     <div class="cart-info">
-                        <img src="{% static 'images//buy-1.jpg'%}">
+                        <img src="{{ cart_item.product.image.url }}">
                         <div>
-                            <p>Red Printed T-Shirt</p>
-                            <small>Price: $50.00</small>
+                            <p>{{ cart_item.product.title }}</p>
+                            <small>Price: ₹ {{ cart_item.product.price }}</small>
                             <br>
                             <a href="">Remove</a>
                         </div>
                     </div>
                 </td>
-                <td><input type="number" value="1"></td>
-                <td>$50.00</td>
-            </tr>
-            <tr>
                 <td>
-                    <div class="cart-info">
-                        <img src="{% static 'images//buy-2.jpg'%}">
-                        <div>
-                            <p>Red Printed T-Shirt</p>
-                            <small>Price: $50.00</small>
-                            <br>
-                            <a href="">Remove</a>
-                        </div>
-                    </div>
+                    <input type="number" value="{{cart_item.quantity}}" disabled >
                 </td>
-                <td><input type="number" value="1"></td>
-                <td>$50.00</td>
+                <td>₹ {{ cart_item.product.price }}</td><!-- -->
             </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="{% static 'images//buy-3.jpg'%}">
-                        <div>
-                            <p>Red Printed T-Shirt</p>
-                            <small>Price: $50.00</small>
-                            <br>
-                            <a href="">Remove</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1"></td>
-                <td>$50.00</td>
-            </tr>
+            {% endfor %}
+        </tbody>
         </table>
         <div class="total-price">
-            <table>
+
+        <table>
+            <tbody>
                 <tr>
                     <td>Subtotal</td>
                     <td>$200.00</td>
@@ -67,7 +47,11 @@
                     <td>$230.00</td>
                 </tr>
                 <tr><td colspan="2"><button> Confirm Order</button> </td></tr>
-            </table>
+            </tbody>
+        </table>
 
         </div>
+    {% else %}
+        <p> Your cart is empty</p>
+    {% endif %}
     </div>
