--- a/templates/product_description.html
+++ b/templates/product_description.html
@@ -2,7 +2,7 @@
 
 {% load static%}
 
- <div class="small-container single-product">
+ <div class="small-container single-product" xmlns="http://www.w3.org/1999/html">
         <div class="row">
             <div class="col-2">
                 <img src="{{ product.image.url }}" width="100%" id="ProductImg">
@@ -12,20 +12,25 @@
                 <p>{{product.title}}</p>
                 <h1>{{product.title}}</h1>
                 <h4>₹{{product.price}}</h4>
-                <select>
-                    <option>Select Size</option>
-                    <option>XXL</option>
-                    <option>XL</option>
-                    <option>L</option>
-                    <option>M</option>
-                    <option>S</option>
-                </select>
-                <input type="number" value="1">
-                <a href="" class="btn">Add To Cart</a>
+<!--                <select>-->
+<!--                    <option>Select Size</option>-->
+<!--                    <option>XXL</option>-->
+<!--                    <option>XL</option>-->
+<!--                    <option>L</option>-->
+<!--                    <option>M</option>-->
+<!--                    <option>S</option>-->
+<!--                </select>-->
+           <form method="post" action="{% url 'add_to_cart' %}" >
+                {% csrf_token %}
+                <input type="hidden" value="{{ product.id }}" name="product_id">
+                <input type="number" value="1" name="quantity" min="1">
+                <button type="submit" class="btn">Add To Cart</button>
+            </form>
 
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
-                <p>{{product.description}}</p>
+            <p>{{product.description}}</p>
+
             </div>
         </div>
     </div>
