--- a/templates/cart_container.html
+++ b/templates/cart_container.html
@@ -1,6 +1,9 @@
 {%load static%}
+{% load multiply_tag  %}
+{% load gettotal_tag  %}
 <div class="small-container cart-page">
-    {% if cart  %}
+    {% if cart  and cart.added_items.all %}
+
         <table>
             <tbody>
             <tr>
@@ -18,14 +21,14 @@
                             <p>{{ cart_item.product.title }}</p>
                             <small>Price: ₹ {{ cart_item.product.price }}</small>
                             <br>
-                            <a href="">Remove</a>
+                            <a href="{% url 'remove_item' cart_item.id %}">Remove</a>
                         </div>
                     </div>
                 </td>
                 <td>
                     <input type="number" value="{{cart_item.quantity}}" disabled >
                 </td>
-                <td>₹ {{ cart_item.product.price }}</td><!-- -->
+                <td>₹ {% multiply_tag cart_item.product.price  cart_item.quantity %}</td><!-- -->
             </tr>
             {% endfor %}
         </tbody>
@@ -34,19 +37,31 @@
 
         <table>
             <tbody>
-                <tr>
-                    <td>Subtotal</td>
-                    <td>$200.00</td>
-                </tr>
-                <tr>
-                    <td>Tax</td>
-                    <td>$35.00</td>
-                </tr>
+<!--                <tr>-->
+<!--                    <td>Delevery Charge</td>-->
+<!--                    <td>$35.00</td>-->
+<!--                </tr>-->
                 <tr>
                     <td>Total</td>
-                    <td>$230.00</td>
+                    <td>₹ {% gettotal_tag cart %}</td>
                 </tr>
-                <tr><td colspan="2"><button> Confirm Order</button> </td></tr>
+                <tr>
+                    <td colspan="2">
+
+<!--                        <form method="post" action="{% url 'checkout' %}"> </form>-->
+<!--                             {% csrf_token %}-->
+<!--                            <input type="hidden" name="total" value="{% gettotal_tag cart %}">-->
+<!--                            <button type="submit" class="btn">CheckOut</button>-->
+
+<!--                         </form>-->
+                        <!-- Corrected Form Structure -->
+        <form method="post" action="{% url 'checkout' %}">
+            {% csrf_token %} <!-- Ensure the CSRF token is inside the form -->
+            <input type="hidden" name="total" value="{% gettotal_tag cart %}">
+            <button type="submit" class="btn">CheckOut</button>
+        </form>
+                    </td>
+                </tr>
             </tbody>
         </table>
 
