--- a/templates/menu.html
+++ b/templates/menu.html
@@ -13,8 +13,10 @@
 <!--                        <li><a href="">Contact</a></li>-->
 
                         {% if not user.is_authenticated %}
+
                             <li><a href="{% url 'account' %}">Account</a></li>
                             {% else%}
+                             <li><a href="{% url 'orders' %}">Orders</a></li>
                             <li><a href="{% url 'logout' %}">Logout</a></li>
                         {% endif  %}
 
